# minimax-agent-gui

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  commit_msg.txt  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-08_18-29-45Z-untitled.md  2026-04-08_18-45-05Z-greeting-in-portuguese.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js  vitest.setup.js
desktop/.runtime/: launch-tauri-dev.ps1
desktop/design-reference/: MiniMax Studio.dc.html  TAURI_SPEC.md
desktop/packaging/: backend.spec
desktop/scripts/: dev.ps1  generate-readme.mjs  screenshots.mjs
desktop/src/: App.jsx  App.tsx  index.css  main.jsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: CreditBalanceWidget.jsx  MarkdownRenderer.jsx  QuotaDashboard.jsx  Sidebar.jsx
desktop/src/components/agent-context/: AboutYouCard.jsx  AboutYouCard.test.jsx  AgentContextTab.jsx  ContextModal.jsx  ContextModal.test.jsx  ContextProvider.jsx  ContextProvider.test.jsx  DocViewer.jsx  DocViewer.test.jsx  IncompleteContextBanner.jsx  IncompleteContextBanner.test.jsx  OnboardingWizard.jsx  OnboardingWizard.test.jsx
desktop/src/components/chat/: ChatPanel.jsx  ChatPanel.tsx  Composer.test.tsx  Composer.tsx  MessageBubble.tsx
desktop/src/components/coding/: AgentChatPanel.jsx  CodingPanel.jsx  WorkspacePicker.jsx  WorkspaceSidebar.jsx  WorkspaceSidebar.test.jsx  XTermTerminal.jsx  useCodingChat.js
desktop/src/components/command-palette/: CommandPalette.jsx
desktop/src/components/context-refs/: ContextRefAutocomplete.jsx  ContextRefChips.jsx  buildAttachedContext.js  parseRefs.js  parseRefs.test.jsx  useContextRefs.js
desktop/src/components/effects/: MatrixRain.jsx
desktop/src/components/help/: HelpPanel.jsx  helpLoader.js
desktop/src/components/media/: ImagePanel.jsx  MusicPanel.jsx  RecentGenerations.jsx  SpeechPanel.jsx  VideoPanel.jsx
desktop/src/components/onboarding/: FirstRunSetup.jsx  Onboarding.jsx
desktop/src/components/settings/: QuickSettings.jsx  (+4 more)
desktop/src/context/: SessionTokensContext.jsx
desktop/src/help/: manifest.json
desktop/src/hooks/: useAgentContext.js  useAgentContext.test.jsx  useBackendReady.js  useChat.ts  useLiveTodos.js  useSelectedModel.js
desktop/src/i18n/: en.json  es.json  i18n.test.js  index.js  ja.json  ko.json  pt-BR.json  zh-CN.json
desktop/src/lib/: api.js  modelLimits.js
docs/: USER_GUIDE.md  product-vision.md
docs/roadmap/: v0.5-hermes-context-features.md
gui/: __init__.py  main.py
gui/panels/: __init__.py  chat_panel.py  image_panel.py  tts_panel.py
gui/widgets/: __init__.py
mini_agent/: agent.py  cli.py  config.py  permissions.py
mini_agent/config/: config-example.yaml  system_prompt.md
mini_agent/llm/: anthropic_client.py  base.py  llm_wrapper.py  openai_client.py
mini_agent/tools/: __init__.py  media_tools.py  memory_tool.py  skill_loader.py  tasks_tool.py
mini_agent/tui/: __init__.py  app.py  styles.css
mini_agent/tui/widgets/: __init__.py  activity_panel.py  chat_panel.py  composer.py  sidebar.py
mini_max_mcp/: __init__.py  client.py  mcp_tool_wrapper.py  mcp_tools.py  pricing.py
tests/: _run_all.py  _run_speech.py  _summarize.py  test_agent_context.py  test_agent_context_api.py  test_coding_workspace.py  test_compact_logging.py  test_context_refs.py  test_context_refs_endpoint.py  test_generation_defaults.py  test_mcp_section.py  test_memory_tool.py  test_memory_tool_integration.py  test_music_cover.py  test_music_lyrics.py  test_music_phase1.py  test_pricing.py  test_skill_loader.py  test_skills_api.py  test_skills_crud.py  test_speech.py  test_subdirectory_hints.py  test_system_prompt.py  test_task_ws_registry.py  test_tasks_tool_callback.py  test_token_attribution.py
web/: package-lock.json  package.json
web/backend/: agent_context.py  context_refs.py  conv_store.py  i18n.py  main.py  mcp_agent_tools.py  mcp_runtime.py  requirements.txt  subdirectory_hints.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/frontend/public/: manifest.json  sw.js
web/frontend/src/: App.jsx  index.css  main.jsx  themes.css
(+96 files in other folders)
